--- a/assets/css/bd-coming-soon.css
+++ b/assets/css/bd-coming-soon.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Lexend', sans-serif;
-  background-image: url("../images/bg.jpeg");
+  background-image: url("../images/bg-main.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
